--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Cypress tutorial for beginners</title>
   </head>
   <body style="
-  background-color: antiquewhite;
+  background-color: rgb(238, 222, 200);
   color:rgb(64, 64, 189);
   font-size:40px;
   display: flex;
